fixed problem with tasks in main.yml

--- a/cfn/vpc.template
+++ b/cfn/vpc.template
@@ -6,6 +6,9 @@
     },
     "kmsKeyAdmin": {
       "Type": "String"
+    },
+    "repoUrl": {
+      "Type": "String"
     }
   },
   "Mappings": {
@@ -408,6 +411,8 @@
             "Fn::Join": ["\n", [
               "#!/bin/bash",
               "yum install -y gcc",
+              "yum install -y git",
+              "yum install -y openvpn",
               "pip install virtualenvwrapper",
               "echo \"source /usr/local/bin/virtualenvwrapper.sh\" >> /home/ec2-user/.bash_profile",
               "sudo su - ec2-user",
@@ -421,7 +426,10 @@
               }, "\" >> /home/ec2-user/.bash_profile",
               "echo \"export AWS_BUCKET_NAME=", {
                 "Ref": "ansibleS3Bucket"
-              }, "\" >> /home/ec2-user/.bash_profile"
+              }, "\" >> /home/ec2-user/.bash_profile",
+              "git pull ", {
+                "Ref": "repoUrl"
+              }
             ]]
           }
         }
