--- a/ansible/roles/ansible-master/tasks/main.yml
+++ b/ansible/roles/ansible-master/tasks/main.yml
@@ -1,5 +1,4 @@
-tasks:
-- name: ssh-keygen
+- name: generate the SSH key pair for connecting ansible master to slaves
   shell: ssh-keygen -N '' -f ~/.ssh/id_ansible
-- name: put-key-s3
+- name: copy the public key to S3
   shell: aws s3 cp ~/.ssh/id_ansible s3://${AWS_BUCKET_NAME}
