--- a/ansible/roles/ansible-slave/tasks/main.yml
+++ b/ansible/roles/ansible-slave/tasks/main.yml
@@ -1,7 +1,7 @@
-tasks:
-- name: get-key-s3
+- name: Copy the public key from S3
   shell: aws s3 cp s3://${AWS_BUCKET_NAME}/id_ansible.pub /home/ec2-user/.ssh/id_ansible.pub
 
-- authorized_key:
+- name: Add the public key to the authorized key file
+  authorized_key:
     user: ec2-user
     key: "{{ lookup('file', '/home/ec2-user/.ssh/id_ansible.pub') }}"
