--- a/ansible/roles/ansible-master/tasks/main.yml
+++ b/ansible/roles/ansible-master/tasks/main.yml
@@ -1,4 +1,8 @@
 - name: generate the SSH key pair for connecting ansible master to slaves
-  shell: ssh-keygen -N '' -f ~/.ssh/id_ansible
-- name: copy the public key to S3
-  shell: aws s3 cp ~/.ssh/id_ansible s3://${AWS_BUCKET_NAME}
+  shell: ssh-keygen -N '' -f /home/ec2-user/.ssh/id_ansible_slave
+
+- name: import the key material into EC2
+  ec2_key:
+    name: id_ansible_slave
+    key_material: "{{ item }}"
+  with_file: /home/ec2-user/.ssh/id_ansible_slave.pub
