--- a/cfn/vpc.template
+++ b/cfn/vpc.template
@@ -410,17 +410,18 @@
           "Fn::Base64": {
             "Fn::Join": ["\n", [
               "#!/bin/bash",
-              "yum install -y gcc",
-              "yum install -y git",
-              "yum install -y openvpn",
-              "pip install ansible",
-              "pip install boto",
-              "pip install boto3",
-              "wget https://raw.githubusercontent.com/ansible/ansible/devel/contrib/inventory/ec2.py",
-              "wget https://raw.githubusercontent.com/ansible/ansible/devel/contrib/inventory/ec2.ini",
-              "mkdir -p /etc/ansible"
-              "cp ec2.py /etc/ansible/ec2.py",
-              "cp ec2.ini /etc/ansible/ec2.ini", {
+              "yum install -y git", {
+                "Fn::Join": ["", ["git clone ", {
+                  "Ref": "repoUrl"
+                }]]
+              },
+              "chmod 755 clusters/bootstrap.sh",
+              "cd clusters && bootstrap.sh",
+              "sudo su - ec2-user", {
+                "Fn::Join": ["", ["git clone ", {
+                  "Ref": "repoUrl"
+                }]]
+              }, {
                 "Fn::Join": ["", ["echo \"export AWS_KMS_KEY_ID=", {
                   "Fn::GetAtt": ["ansibleMasterKey", "Arn"]
                 }, "\" >> /home/ec2-user/.bash_profile"]]
@@ -435,11 +436,6 @@
               }, {
                 "Fn::Join": ["", ["echo \"export AWS_STACK_NAME=", {
                   "Ref": "AWS::StackName"
-                }]]
-              },
-              "sudo su - ec2-user", {
-                "Fn::Join": ["", ["git clone ", {
-                  "Ref": "repoUrl"
                 }]]
               }
             ]]
