--- a/ansible/roles/ansible-master/tasks/main.yml
+++ b/ansible/roles/ansible-master/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: generate the SSH key pair for connecting ansible master to slaves
-  shell: ssh-keygen -N '' -f /home/ec2-user/.ssh/id_ansible_slave
+  shell: ssh-keygen -N '' -f /home/ec2-user/.ssh/{{ ssh_key_name }}
 
 - name: import the key material into EC2
   ec2_key:
-    name: id_ansible_slave
+    name: "{{ ssh_key_name }}"
     key_material: "{{ item }}"
-  with_file: /home/ec2-user/.ssh/id_ansible_slave.pub
+  with_file: /home/ec2-user/.ssh/{{ ssh_key_name }}.pub
